First version control.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Phone Help</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
     <script src="script.js"></script>
+  </head>
+
+  <body>
+    <!--Navigation-->
+    <img src="images/image.png" alt="word..." style="width:100%;" class="image">
+    <img src="images/image2.png" alt="word..." style="width:100%;" class="image2">
+    <nav>
+      <div class="navText">PHONE HELP</div>
+      <a href="helpPage">HELP</a>
+    </nav>
+    <h2 class="changeword">word</h2>
+
+    <a class="helpButton" href="helpPage.html">?</a>
+
+    <div class="padding">
+
+      <!--Description-->
+      <div class="description">
+        <p>This website is designed to help you with... </p>
+        <br>
+      </div>
+      <br><hr><br>
+
+      <!--Apps-->
+      <div class="title">APPS.</div>
+      <br>
+      <!--Facebook-->
+      <div class="aroundApp">
+        <div class="app">
+          <a href="facebook.html" style="text-decoration: none;">
+            <img src="images/facebook.png" alt="Facebook" width="600" height="400">
+            <div class="appName">Facebook</div>
+          </a>
+        </div>
+      </div>
+
+      <!--1News-->
+      <div class="aroundApp">
+        <div class="app">
+          <a href="###" style="text-decoration: none;">
+            <img src="images/1news.png" alt="1News" width="600" height="400">
+            <div class="appName">1News</div>
+          </a>
+        </div>
+      </div>
+
+      <!--Gmail-->
+      <div class="aroundApp">
+        <div class="app">
+          <a href="###" style="text-decoration: none;">
+            <img src="images/gmail.png" alt="Gmail" width="600" height="400">
+            <div class="appName">Gmail</div>
+          </a>
+        </div>
+      </div>
+
+      <!--Messenger-->
+      <div class="aroundApp">
+        <div class="app">
+          <a href="###" style="text-decoration: none;">
+            <img src="images/messenger.png" alt="Messanger" width="600" height="400"> 
+            <div class="appName">Messenger</div>
+          </a>
+        </div>
+      </div>
+
+      <!--NZ Herald-->
+      <div class="aroundApp">
+        <div class="app">
+          <a href="###" style="text-decoration: none;">
+            <img src="images/herald.jpg" alt="NZ Herald" width="600" height="400">
+            <div class="appName">NZ Herald</div>
+          </a>
+        </div>
+      </div>
+
+      <!--Westpac-->
+      <div class="aroundApp">
+        <div class="app">
+          <a href="###" style="text-decoration: none;">
+            <img src="images/westpac.png" alt="Westpac" width="600" height="400">
+            <div class="appName">Westpac</div>
+          </a>
+        </div>
+      </div>
+
+      <!--Skype-->
+      <div class="aroundApp">
+        <div class="app">
+          <a href="###" style="text-decoration: none;">
+            <img src="images/skype.png" alt="Skype" width="600" height="400">
+            <div class="appName">Skype</div>
+          </a>
+        </div>
+      </div>
+
+      <!--NZ COVID Tracer-->
+      <div class="aroundApp">
+        <div class="app">
+          <a href="###" style="text-decoration: none;">
+            <img src="images/covid.jpg" alt="Covid Tracer App" width="600" height="400"> 
+            <div class="appName">Covid Tracer</div>
+          </a>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
