--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <img alt="Computer Image" class="image2" src="images/image2.png" style="height:25rem; width:100%;">
     <nav>
       <div class="navText">PHONE HELP</div>
-      <a href="helpPage">HELP</a>
+      <a href="helpPage.html">HELP</a>
+      <a href="index.html">HOME</a>
     </nav>
     <h2 class="headerText">Phone Help.</h2>
 
@@ -33,7 +34,7 @@
           <p>Click the button below to leave this message and carry on to the website.</p>
           <div class="container">
             <div class="centre">
-              <button class="buttons" onclick="buttonPopup()">CLICK HERE</button>
+              <button class="buttons" onclick="closePopup()">CLICK HERE</button>
             </div>
           </div>
           <br>
