Started trying to use an image-map.

--- a/helpPage.html
+++ b/helpPage.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="script.js"></script>
+    <link href="../stylesheet/style.css" rel="stylesheet" type="text/css" />
+    <script src="../javascript/script.js"></script>
   </head>
 
   <body>
 
     <!--Navigation-->
-    <img alt="Computer Image" class="image" src="images/image.png" style="height:20rem; width:100%;">
-    <img alt="Computer Image" class="image2" src="images/image2.png" style="height:25rem; width:100%;">
+    <img alt="Computer Image" class="image" src="../images/image.png" style="height:20rem; width:100%;">
+    <img alt="Computer Image" class="image2" src="../images/image2.png" style="height:25rem; width:100%;">
     <nav>
       <div class="navText">PHONE HELP</div>
-      <a href="helpPage.html">HELP</a>
-      <a href="index.html">HOME</a>
+      <a href="../helpPage.html">HELP</a>
+      <a href="../index.html">HOME</a>
     </nav>
     <h2 class="headerText">Help Page.</h2>
 
@@ -41,8 +41,9 @@
         </div>
         <div id="examplePopup">CONGRATULATIONS!</div>
       </div>
-      <hr><br>
+      <br><hr><br>
 
     </div>
+
   </body>
 </html>
