--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="script.js"></script>
+    <link href="../stylesheet/style.css" rel="stylesheet" type="text/css" />
+    <script src="../javascript/script.js"></script>
   </head>
 
   <body>
 
     <!--Navigation-->
-    <img alt="Computer Image" class="image" src="images/image.png" style="height:20rem; width:100%;">
-    <img alt="Computer Image" class="image2" src="images/image2.png" style="height:25rem; width:100%;">
+    <img alt="Computer Image" class="image" src="../images/image.png" style="height:20rem; width:100%;">
+    <img alt="Computer Image" class="image2" src="../images/image2.png" style="height:25rem; width:100%;">
     <nav>
       <div class="navText">PHONE HELP</div>
-      <a href="helpPage.html">HELP</a>
-      <a href="index.html">HOME</a>
+      <a href="../helpPage.html">HELP</a>
+      <a href="../index.html">HOME</a>
     </nav>
     <h2 class="headerText">Phone Help.</h2>
 
     <!--Help button-->
-    <a class="helpButton" href="helpPage.html">?</a>
+    <a class="helpButton" href="../helpPage.html">?</a>
 
     <!--Popup-->
     <div class="popup" id="popup">
@@ -58,8 +58,8 @@
       <!--Facebook-->
       <div class="aroundApp">
         <div class="app">
-          <a href="facebook.html" style="text-decoration: none;">
-            <img src="images/facebook.png" alt="Facebook" width="600" height="400">
+          <a href="apps/facebook.html" style="text-decoration: none;">
+            <img src="../images/facebook.png" alt="Facebook" width="600" height="400">
             <div class="appName">Facebook</div>
           </a>
         </div>
@@ -68,8 +68,8 @@
       <!--1News-->
       <div class="aroundApp">
         <div class="app">
-          <a href="###" style="text-decoration: none;">
-            <img src="images/1news.png" alt="1News" width="600" height="400">
+          <a href="apps/1news.html" style="text-decoration: none;">
+            <img src="../images/1news.png" alt="1News" width="600" height="400">
             <div class="appName">1News</div>
           </a>
         </div>
@@ -79,7 +79,7 @@
       <div class="aroundApp">
         <div class="app">
           <a href="###" style="text-decoration: none;">
-            <img src="images/gmail.png" alt="Gmail" width="600" height="400">
+            <img src="../images/gmail.png" alt="Gmail" width="600" height="400">
             <div class="appName">Gmail</div>
           </a>
         </div>
@@ -89,7 +89,7 @@
       <div class="aroundApp">
         <div class="app">
           <a href="###" style="text-decoration: none;">
-            <img src="images/messenger.png" alt="Messanger" width="600" height="400"> 
+            <img src="../images/messenger.png" alt="Messanger" width="600" height="400"> 
             <div class="appName">Messenger</div>
           </a>
         </div>
@@ -99,8 +99,8 @@
       <div class="aroundApp">
         <div class="app">
           <a href="###" style="text-decoration: none;">
-            <img src="images/herald.jpg" alt="NZ Herald" width="600" height="400">
-            <div class="appName">NZ Herald</div>
+            <img src="../images/herald.jpg" alt="Herald" width="600" height="400">
+            <div class="appName">Herald</div>
           </a>
         </div>
       </div>
@@ -109,7 +109,7 @@
       <div class="aroundApp">
         <div class="app">
           <a href="###" style="text-decoration: none;">
-            <img src="images/westpac.png" alt="Westpac" width="600" height="400">
+            <img src="../images/westpac.png" alt="Westpac" width="600" height="400">
             <div class="appName">Westpac</div>
           </a>
         </div>
@@ -119,7 +119,7 @@
       <div class="aroundApp">
         <div class="app">
           <a href="###" style="text-decoration: none;">
-            <img src="images/skype.png" alt="Skype" width="600" height="400">
+            <img src="../images/skype.png" alt="Skype" width="600" height="400">
             <div class="appName">Skype</div>
           </a>
         </div>
@@ -129,12 +129,24 @@
       <div class="aroundApp">
         <div class="app">
           <a href="###" style="text-decoration: none;">
-            <img src="images/covid.jpg" alt="Covid Tracer App" width="600" height="400"> 
-            <div class="appName">Covid Tracer</div>
+            <img src="../images/covid.jpg" alt="Covid Tracer App" width="600" height="400"> 
+            <div class="appNameDisplayed">Covid Tracer</div>
+            <div class="appNameHidden">Tracer</div>
           </a>
         </div>
       </div>
 
+
+
+
+
+
+
+
+
+
+
     </div>
+
   </body>
 </html>
