--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title>
-    <link href="../stylesheet/style.css" rel="stylesheet" type="text/css" />
-    <script src="../javascript/script.js"></script>
+    <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
+    <link href="stylesheet/screenSizes.css" rel="stylesheet" type="text/css"/>
+    <script src="script.js"></script>
   </head>
 
   <body>
