Finished the Facebook page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/phone.png">
     <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
     <link href="stylesheet/screenSizes.css" rel="stylesheet" type="text/css"/>
     <script src="script.js"></script>
@@ -136,18 +137,7 @@
           </a>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
-
+   
     </div>
-
   </body>
 </html>
