--- a/helpPage.html
+++ b/helpPage.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Help</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/phone.png">
     <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
     <link href="stylesheet/screenSizes.css" rel="stylesheet" type="text/css"/>
     <script src="script.js"></script>
@@ -43,6 +44,9 @@
         <div id="examplePopup">CONGRATULATIONS!</div>
       </div>
       <br><hr><br>
+      <div class="imageMapHelp">
+
+      </div>
 
     </div>
 
