--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
 
     <!--Navigation-->
-    <img alt="Computer Image" class="image" src="../images/image.png" style="height:20rem; width:100%;">
-    <img alt="Computer Image" class="image2" src="../images/image2.png" style="height:25rem; width:100%;">
+    <img alt="Computer Image" class="headerImage" src="../images/headerImage.png" style="height:20rem; width:100%;">
+    <img alt="Computer Image" class="headerImage2" src="../images/headerImage2.png" style="height:25rem; width:100%;">
     <nav>
       <div class="navText">PHONE HELP</div>
       <a href="../helpPage.html">HELP</a>
