Finished Gmail one page

--- a/index.html
+++ b/index.html
@@ -67,20 +67,10 @@
         </div>
       </div>
 
-      <!--1News-->
-      <div class="aroundApp">
-        <div class="app">
-          <a href="apps/1news.html" style="text-decoration: none;">
-            <img src="../images/1news.png" alt="1News" width="600" height="400">
-            <div class="appName">1News</div>
-          </a>
-        </div>
-      </div>
-
       <!--Gmail-->
       <div class="aroundApp">
         <div class="app">
-          <a href="###" style="text-decoration: none;">
+          <a href="apps/gmail.html" style="text-decoration: none;">
             <img src="../images/gmail.png" alt="Gmail" width="600" height="400">
             <div class="appName">Gmail</div>
           </a>
@@ -90,7 +80,7 @@
       <!--Messenger-->
       <div class="aroundApp">
         <div class="app">
-          <a href="###" style="text-decoration: none;">
+          <a href="apps/messenger.html" style="text-decoration: none;">
             <img src="../images/messenger.png" alt="Messanger" width="600" height="400"> 
             <div class="appName">Messenger</div>
           </a>
@@ -100,29 +90,9 @@
       <!--NZ Herald-->
       <div class="aroundApp">
         <div class="app">
-          <a href="###" style="text-decoration: none;">
+          <a href="apps/herald.html" style="text-decoration: none;">
             <img src="../images/herald.jpg" alt="Herald" width="600" height="400">
             <div class="appName">Herald</div>
-          </a>
-        </div>
-      </div>
-
-      <!--Westpac-->
-      <div class="aroundApp">
-        <div class="app">
-          <a href="###" style="text-decoration: none;">
-            <img src="../images/westpac.png" alt="Westpac" width="600" height="400">
-            <div class="appName">Westpac</div>
-          </a>
-        </div>
-      </div>
-
-      <!--Skype-->
-      <div class="aroundApp">
-        <div class="app">
-          <a href="###" style="text-decoration: none;">
-            <img src="../images/skype.png" alt="Skype" width="600" height="400">
-            <div class="appName">Skype</div>
           </a>
         </div>
       </div>
@@ -130,7 +100,7 @@
       <!--NZ COVID Tracer-->
       <div class="aroundApp">
         <div class="app">
-          <a href="###" style="text-decoration: none;">
+          <a href="apps/covidTracer.html" style="text-decoration: none;">
             <img src="../images/covid.jpg" alt="Covid Tracer App" width="600" height="400"> 
             <div class="appNameDisplayed">Covid Tracer</div>
             <div class="appNameHidden">Tracer</div>
