Finished Gmail two page

--- a/apps/gmail.html
+++ b/apps/gmail.html
@@ -9,8 +9,8 @@
     <link href="/stylesheet/style.css" rel="stylesheet" type="text/css"/> <!--Original stylesheet used one all pages-->
     <link href="/stylesheet/apps.css" rel="stylesheet" type="text/css"/> <!--Stylesheet for the apps used-->
     <link href="/stylesheet/screenSizes.css" rel="stylesheet" type="text/css"/> <!--Stylesheet for different sized screens-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../script.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Stylesheet for icons used from Font Awesome-->
+    <script src="../script.js" type="text/javascript"></script> <!--The code validator says to remove the type attribute from the line of code, however without it the page runs withs errors-->
   </head>
 
   <body>
