--- a/apps/messenger.html
+++ b/apps/messenger.html
@@ -22,8 +22,8 @@
     </nav>
 
     <!--Description of the app-->
-    <h1 class="appHeader" style="color: #E84A2E">...</h1>
-    <p class="appDescription">...</p>
+    <h1 class="appHeader" style="color:#00a2ff">Messenger</h1>
+    <p class="appDescription">This app can be downloaded from the App Store or Google Play. This is Facebooks messaging app which uses your Facebook account to message your friends. </p>
 
     <!--Help button-->
     <a class="helpButton" href="../helpPage.html">?</a>
@@ -67,11 +67,20 @@
       </div>
 
       <!--Image in the image map. The "usemap" links the image to the map.-->
-      <img src="..." usemap="#image-map" class="imageMapImage" alt="...">
+      <img src="/images/mHome.png" usemap="#image-map" class="imageMapImage" alt="Messenger Home Page">
 
       <!--Image map made on "https://www.image-map.net/"-->
       <!--Each area is a different button on the home page, which is why the coords differ. The "data-target" links the area to its description and the "onclick" gets rid of the text that is dispalyed in the beginning when an area is clicked.-->
-        
+      <map name="image-map">
+        <area target="" alt="Account" title="Account" href="javascript:void(0)" coords="19,22,167,150" shape="rect">
+        <area target="" alt="Camera" title="Camera" href="javascript:void(0)" coords="789,24,919,148" shape="rect">
+        <area target="" alt="New Message" title="New Message" href="javascript:void(0)" coords="930,24,1054,151" shape="rect">
+        <area target="" alt="Search" title="Search" href="javascript:void(0)" coords="19,176,1054,290" shape="rect">
+        <area target="" alt="Create Room" title="Create Room" href="javascript:void(0)" coords="22,323,201,568" shape="rect">
+        <area target="" alt="Message" title="Message" href="javascript:void(0)" coords="24,593,827,775" shape="rect">
+        <area target="" alt="Chats" title="Chats" href="javascript:void(0)" coords="5,1992,503,2125" shape="rect">
+        <area target="" alt="People" title="People" href="javascript:void(0)" coords="514,1992,1072,2124" shape="rect">
+      </map>
 
 
     </div>
