--- a/helpPage.html
+++ b/helpPage.html
@@ -34,7 +34,7 @@
         <br>
         <p><b>Phone/Tablet:</b> Use your finger to click the middle of the button, if this doesn't work try clicking the button once again, then it should work.</p>
         <br>
-        <p>To make this easier for you to use, majority of buttons used throughout this website look like the example below.</p>
+        <p>To make this easier for you to use, buttons directing you to other places will look like the example below.</p>
         <br>
         <!--Centres button-->
         <div class="container">
@@ -46,11 +46,13 @@
       </div>
       <br><hr><br>
 
-      <!--...-->
-      <div class="...">
-        <h2></h2>
+      <!--Explanation on how to use the image map-->
+      <div class="buttonHelp">
+        <h2>HOW TO USE THE IMAGES.</h2>
         <br><br><br>
-        <p><b></b></p> 
+        <p><b>Desktop/Laptop:</b> Hover your mouse over different sections of the image, this will display a short three to four description of the function. If you then click that section a more in-depth explanation will be displayed.</p> 
+        <br>
+        <p><b>Phone/Tablet:</b> Using your finger, click different parts of the image. This will display an in-depth explanation of how that function works.</p> 
       </div>
     </div>
 
